# Dayflow

./: .gitignore  CLAUDE.md  Dayflow.spec  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_DETAILED_CN.md  README_EN.md  UI_IMPROVEMENTS.md  build.bat  build.py  config.py  dayflow_windows_python_implementation_plan.md  fix_game_session_merge.py  main.py  pyproject.toml  readme_1.md  release.md  release_notes.md  requirements-dev.txt  requirements.txt  run.bat  run_silent.bat  setup.py  setup_dev.bat  simple_test_fix.py  verify_config.py  verify_fix_in_app.py  功能接入检查报告.md  智能闲置检测改进说明.md  更新内容  程序结构.md
.claude/: settings.local.json
.github/workflows/: ci.yml
archive/: README.md
archive/docs/: DEVELOPMENT.md  INSTALL_FFMPEG.md  install_ffmpeg.bat
core/: activity_monitor.py  activity_monitor_v2.py  analysis.py  config_manager.py  dashboard_exporter.py  data_migration.py  health_reminder.py  health_reminder_backup.py  health_reminder_final.py  health_reminder_final_priority.py  health_reminder_fixed.py  health_reminder_priority_fix.py  llm_provider.py  recorder.py  recorder.py.backup  types.py
database/: schema.sql  storage.py
resources/config/: default_settings.json
scripts/: build.py
src/dayflow/: __init__.py  main.py
src/dayflow/analysis/: __init__.py  analysis_manager.py  gemini_service.py  llm_service.py
src/dayflow/core/: __init__.py  power_manager.py  recorder.py  storage.py  video_processor.py
src/dayflow/models/: __init__.py  category.py  daily_summary.py  database.py  recording_chunk.py  timeline_activity.py
src/dayflow/services/: __init__.py  daily_summary_manager.py  (+4 more)
tests/: __init__.py  test_recorder.py  test_video_processor_security.py
ui/: daily_event_view.py  date_range_dialog.py  inspiration_view.py  main_window.py  stats_view.py  themes.py  timeline_view.py
(+21 files in other folders)
