[tool.poetry]
name = "dayflow-windows"
version = "0.1.0"
description = "Automatic timeline generation tool for Windows - AI-powered screen recording and activity tracking"
authors = ["Dayflow Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "dayflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Screen recording and video processing
mss = "^9.0.1"
opencv-python = "^4.8.1"
Pillow = "^10.1.0"
ffmpeg-python = "^0.2.0"

# Database
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"

# AI Integration
google-generativeai = "^0.3.1"
openai = "^1.3.5"
requests = "^2.31.0"

# GUI Framework
PyQt6 = "^6.6.0"
PyQt6-WebEngine = "^6.6.0"
matplotlib = "^3.8.2"

# System Integration
pywin32 = {version = "^306", platform = "win32"}
psutil = "^5.9.6"
plyer = "^2.1.0"

# Security
cryptography = "^41.0.7"
keyring = "^24.3.0"

# Utilities
python-dateutil = "^2.8.2"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-qt = "^4.2.0"
black = "^23.11.0"
mypy = "^1.7.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
# Note: PyInstaller not included - requires Python <3.13
# Install separately when building: pip install pyinstaller

[tool.poetry.scripts]
dayflow = "dayflow.main:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
